fix bg image too big

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ html {
   flex-direction: column;
   align-items: center;
   min-width: 40vw;
-  min-height: 100vh;
+  min-height: 50vh;
 }
 
 .app-container {
